<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_detect"
        android:background="@drawable/border_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_vertical_margin"
            app:srcCompat="@drawable/img_romerock_logo_gray" />


        <TextView
            android:id="@+id/tittle"
            style="@style/currencyLanguage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/language_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/currency_text_size"
            android:background="@drawable/border_language"
            android:text="@string/tittleMM"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/txtActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="On"
            android:textAllCaps="true"
            android:textSize="47sp"
            android:layout_below="@+id/tittle"
            android:layout_centerHorizontal="true" />


        <RelativeLayout
            android:id="@+id/relShareFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_shared"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/txtShareFacebook"
                style="@style/shareText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="28dp"
                android:gravity="left"
                android:text="@string/shareOnFace"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imgSharedFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/txtShareFacebook"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:src="@drawable/ic_check" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relShareFacebook"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_shared_bottom"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/relativeLayout2">

            <TextView
                android:id="@+id/txtShareTwitter"
                style="@style/shareText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="28dp"
                android:text="@string/shareOnTwitter"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imgSharedTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/txtShareTwitter"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:src="@drawable/ic_check" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtRestore"
            style="@style/text_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/relativeLayout2"
            android:layout_alignLeft="@+id/tittle"
            android:layout_alignRight="@+id/relativeLayout2"
            android:layout_alignStart="@+id/tittle"
            android:layout_below="@+id/relativeLayout2"
            android:text="@string/restore"
            android:textSize="16dp"
            android:gravity="right" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_detect"
        style="@style/buttonStyleMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center|center_vertical"
        android:text="@string/select_share"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

</RelativeLayout>
